objects/Demo__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Opportunity__r.Business_Unit__c</formula>
        <inlineHelpText>Set from the Opp&apos;s Business Unit.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Demos</relationshipLabel>
        <relationshipName>Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Webex_Event_ID__c</fullName>
        <label>Webex Event ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webex_Value__c</fullName>
        <formula>Opportunity__r.Webex_Split_Value_Demos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Webex Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Webexer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Webexer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Demo</label>
    <nameField>
        <label>Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>